Fixed article boostrap col alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,4 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+body { margin-top: 50px; }
